--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,11 +1,6 @@
 FROM python:3.10
-RUN curl -sSL https://install.python-poetry.org | POETRY_HOME=/etc/poetry python3 - 
 WORKDIR /app
-
-COPY pyproject.toml poetry.lock .
-RUN /etc/poetry/bin/poetry config virtualenvs.create false && \
-    /etc/poetry/bin/poetry install
-COPY . .
+RUN pip install -r requirements.txt
 ARG BOT_HOST=ctf1-backend.onrender.com
 ARG BOT_PORT=10000
 USER daemon 
