--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.10
 WORKDIR /app
-RUN pip install -r requirements.txt
+RUN pip install -r web/requirements.txt
 ARG BOT_HOST=ctf1-backend.onrender.com
 ARG BOT_PORT=10000
 USER daemon 
