--- a/bot/package.json
+++ b/bot/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "puppeteer": "^19.3.0"
+    "puppeteer": "^19.3.0",
+    "express": "^4.18.2"
   },
   "scripts": {
     "start": "node app.js"
