--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -6,12 +6,16 @@ RUN apk add chromium
 RUN mkdir /app
 WORKDIR /app
 COPY package.json yarn.lock /app/
+
+
+ARG PORT=10000
+
+ARG SITE=ctf1.onrender.com
+
+ARG REPORT_HOST=ctf1.onrender.com
+ARG FLAG=ICED{SVGed™}
+
 RUN yarn
 
 COPY . .
 ENTRYPOINT ["yarn", "start"]
-
-ARG PORT=10000
-ARG SITE=ctf1.onrender.com
-ARG REPORT_HOST=ctf1.onrender.com
-ARG FLAG=ICED{SVGed_1s_4w3s0m3}
