--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -10,7 +10,7 @@ COPY package.json yarn.lock /app/
 
 ENV PORT=10000
 
-ENV SITE=ctf1.onrender.com
+ENV SITE=https://ctf1.onrender.com
 
 ENV REPORT_HOST=ctf1.onrender.com
 ENV FLAG=ICED{SVGed™}
