--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -12,7 +12,7 @@ ENV PORT=10000
 
 ENV SITE=https://ctf1.onrender.com
 
-ENV REPORT_HOST=ctf1.onrender.com
+ENV REPORT_HOST=https://ctf1.onrender.com
 ENV FLAG=ICED{SVGed™}
 
 RUN yarn
