--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:17-alpine
-
+RUN echo "https://mirror.twds.com.tw/alpine/v3.10/main" > /etc/apk/repositories ; \
+    echo "https://mirror.twds.com.tw/alpine/v3.10/community" >> /etc/apk/repositories ;
+    
 RUN apk update && apk upgrade
 RUN apk add chromium 
 
