--- a/bot/package.json
+++ b/bot/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
-    "puppeteer": "^19.3.0",
-    "express": "^4.18.2"
+    "express": "^4.21.2",
+    "puppeteer": "^24.1.0"
   },
   "scripts": {
     "start": "node app.js"
